FIX overflow hidden in LoginPopup

--- a/dapp/src/components/Foreground/Popup/Generic/popup.module.scss
+++ b/dapp/src/components/Foreground/Popup/Generic/popup.module.scss
@@ -35,7 +35,6 @@
 
         max-width: unset;
         max-height: unset;
-        overflow: auto;
 
         .close {
             background-color: $primary;
